# async-arch-course

./: README.md
project/auth/: docker-compose.yml  pyproject.toml
project/auth/app/: ctx_vars.py  database.py  main.py
project/auth/app/api/: __init__.py  controllers.py  deps.py
project/auth/app/api/middleware/: headers.py
project/auth/app/application/: events.py  exceptions.py  services.py
project/auth/app/infrastructure/: avro_models.py  dispatcher.py  orm.py  user_repository.py
project/auth/scripts/: create_kafka_topics.py
project/auth/settings/: config.py
project/auth/settings/di/: adapters.py  container.py  repositories.py  services.py
project/auth/settings/kafka/: client.py
project/auth/settings/kafka/adapters/: avro.py  base.py
project/auth/settings/kafka/encoder/: avro.py
project/task_manager/: Makefile  docker-compose.yml  pyproject.toml
project/task_manager/app/: database.py  main.py  test.py  test_2.py
project/task_manager/app/application/: worker_service.py
project/task_manager/app/application/command/: base.py  complete_task.py  create_task.py  reassign_tasks.py
project/task_manager/app/application/events/: account_changes.py  task_worker_notifier.py
project/task_manager/app/application/query/: base.py  get_tasks.py
project/task_manager/app/common/: constants.py  message.py  pagination.py
project/task_manager/app/common/domain/: entities.py  events.py  exceptions.py  vaue_objects.py
project/task_manager/app/common/infrastructure/: logging.py
project/task_manager/app/domain/: events.py  task.py  worker.py
project/task_manager/app/infrastrucrute/: consumer.py  orm.py  smtp_client.py  task_dispatcher.py
project/task_manager/app/infrastrucrute/di/: apaters.py  container.py  gateways.py  kafka_handlers.py  repositories.py  services.py
project/task_manager/app/infrastrucrute/gateways/: email_notification.py
project/task_manager/app/infrastrucrute/kafka/: avro_models.py  client.py
project/task_manager/app/infrastrucrute/outbox/: constants.py  event_dispather.py  events.py  message_relay.py  models.py  (+1 more)
project/task_manager/scripts/: create_kafka_topic.py
project/task_manager/settings/: config.py
(+15 files in other folders)
